Implement mem backend v1
Asd
